<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, JackAlarmActivity!</string>
    <string name="app_name">JackAlarm</string>
    <string name="monday_cb_text">Monday</string>
    <string name="tuesday_cb_text">Tuesday</string>
    <string name="wednesday_cb_text">Wednesday</string>
    <string name="thursday_cb_text">Thursday</string>
    <string name="friday_cb_text">Friday</string>
    <string name="saturday_cb_text">Saturday</string>
    <string name="setTime">Set Alarm Time</string>
    <string name="alarmToggle_text">Alarm</string>
    <string name="sunday_cb_text">Sunday</string>
    <string name="ALARM_EXECUTE_INTENT">ACTION_EXECUTE_ALARM</string>
    <string name="alarm_set_toast_title">Alarm Now Set</string>
    <string name="alarm_unset_toast_title">Alarm Now Off</string>
    <string name="menu_item_settings">Settings</string>
    <string name="pref_label">Preferences</string>
    <string name="prefs_name_hint">Your Name</string>
    <string name="alarmListenServiceDescription">background service that listens for the \'alarm\' intent and activates the main activity when it recieves it</string>
    <string name="GET_WEATHER_ACTION">get_weather_service_action</string>
    <string name="weatherServiceDescription">this service gets the weather from weather.gov based on your location, and proceses it into a nice format</string>

</resources>
